# aoz-alliance-starter

./: .gitignore  LICENSE  README.md
.github/workflows/: frontend.yml  tracker.yml
docs/: ARCHITECTURE.md  INTEGRATION_TRACKING.md  SETUP.md
docs/maintenance/: 0009-ocr-cleanup.md  (+1 more)
frontend/: index.html  package-lock.json  package.json  vite.config.js  vitest.config.js
frontend/src/: App.jsx  (+8 more)
shared-test-vectors/: paris-iso-week.json
tracker/: .gitignore  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  tsconfig.base.json
tracker/apps/ocr-service/: .env.example  Dockerfile  entrypoint.sh  pyproject.toml
tracker/apps/ocr-service/app/: dispatcher.py  extract.py  llm_fallback.py  main.py  preprocess.py  tess_engine.py  validators.py
tracker/apps/ocr-service/app/parsers/: __init__.py  _trace.py  base.py  contribution_ranking_v1.py  name_ocr.py  player_stats_chat_v1.py  polar_invasion_v1.py  sword_icon_utils.py
tracker/apps/ocr-service/tests/: conftest.py  test_contribution_ranking_parser.py  test_dispatcher_refresh.py  test_extract_llm_fallback.py  test_ironblood_battlefield_parser.py  test_llm_fallback.py  test_main.py  test_name_ocr.py  test_normalize_player_names_tool.py  test_parsers.py  test_player_stats_chat_parser.py  test_polar_invasion_parser.py  test_preprocess.py  test_row_trace.py  test_tess_engine.py  test_v1_event_parsers.py  test_validators.py
tracker/apps/ocr-service/tests/fixtures/: generate.py
tracker/apps/ocr-service/tests/fixtures/battle_frenzy/: 20260503T0200_001.json  20260503T0200_002.json  README.md
tracker/apps/ocr-service/tests/fixtures/contribution_ranking/: README.md  weekly_001.json  weekly_002.json  weekly_003.json  weekly_004.json  weekly_005.json  weekly_006.json  weekly_007.json  weekly_008.json  weekly_009.json
tracker/apps/ocr-service/tests/fixtures/elite_wars/: 20260517T1300_001.json  20260517T1300_002.json  README.md
tracker/apps/ocr-service/tests/fixtures/ironblood_battlefield/: 20260416T0600_001.json  20260416T0600_002.json
tracker/apps/ocr-service/tests/fixtures/polar_invasion/: 20260407T1500_001.json  20260407T1500_002.json  20260407T1500_003.json  20260407T1500_004.json  20260407T1500_005.json  20260414T2300_001.json  20260414T2300_002.json  20260414T2300_003.json  README.md
tracker/apps/ocr-service/tests/fixtures/sprites/: README.md
tracker/apps/ocr-service/tests/fixtures/void_war/: 20260517T0200_001.json  20260517T0200_002.json  README.md
tracker/apps/ocr-service/tests/fixtures/wasteland_showdown/: 20260508T1500_001.json  README.md
tracker/apps/ocr-service/tools/: debug_crops.py  extract_sword_icon.py  measure_detect_top.py  measure_positions.py  measure_rows_real.py  normalize_player_names.py  profile_pipeline.py
(+124 files in other folders)
